--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "homepage": "https://github.com/echovl/olympus-pro-bot#readme",
     "devDependencies": {
         "@types/big.js": "^6.1.3",
+        "@types/express": "^4.17.13",
         "@types/node": "^17.0.30",
+        "@types/node-telegram-bot-api": "^0.56.2",
         "@typescript-eslint/eslint-plugin": "^5.21.0",
         "@typescript-eslint/parser": "^5.21.0",
         "eslint": "^8.14.0",
@@ -35,6 +37,8 @@
         "big.js": "^6.1.1",
         "coingecko-api": "^1.0.10",
         "dotenv": "^16.0.0",
+        "express": "^4.18.1",
+        "node-telegram-bot-api": "^0.57.0",
         "web3": "^1.7.3"
     }
 }
