--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@types/big.js": "^6.1.3",
         "@types/express": "^4.17.13",
         "@types/node": "^17.0.30",
+        "@types/node-cron": "^3.0.1",
         "@types/node-telegram-bot-api": "^0.56.2",
         "@typescript-eslint/eslint-plugin": "^5.21.0",
         "@typescript-eslint/parser": "^5.21.0",
@@ -38,6 +39,7 @@
         "coingecko-api": "^1.0.10",
         "dotenv": "^16.0.0",
         "express": "^4.18.1",
+        "node-cron": "^3.0.0",
         "node-telegram-bot-api": "^0.57.0",
         "web3": "^1.7.3"
     }
