--- a/package.json
+++ b/package.json
@@ -20,15 +20,24 @@
     },
     "homepage": "https://github.com/echovl/olympus-pro-bot#readme",
     "devDependencies": {
+        "@nomiclabs/hardhat-ethers": "^2.0.5",
+        "@nomiclabs/hardhat-waffle": "^2.0.3",
+        "@openzeppelin/contracts": "^4.6.0",
         "@types/big.js": "^6.1.3",
+        "@types/chai": "^4.3.1",
         "@types/express": "^4.17.13",
+        "@types/mocha": "^9.1.1",
         "@types/node": "^17.0.30",
         "@types/node-cron": "^3.0.1",
         "@types/node-telegram-bot-api": "^0.56.2",
         "@typescript-eslint/eslint-plugin": "^5.21.0",
         "@typescript-eslint/parser": "^5.21.0",
+        "chai": "^4.3.6",
         "eslint": "^8.14.0",
         "eslint-config-prettier": "^8.5.0",
+        "ethereum-waffle": "^3.4.4",
+        "ethers": "^5.6.5",
+        "hardhat": "^2.9.3",
         "prettier": "^2.6.2",
         "ts-node": "^10.7.0",
         "ts-node-dev": "^1.1.8",
